# lucid-log

./: .gitignore  .pre-commit-config.yaml  README.md  example-aws-config.yaml  pyproject.toml
.github/workflows/: test.yml
examples/: example_app.py  json_app.py  mixed_format_example_app.py  shared.py  structlog_app.py
lucid_log/: aws_log_parser.py  aws_utils.py  cli.py  console_renderer.py  processors.py  renderer.py  rich_traceback_formatter.py
tests/: sample_error_log.json
