[tool.poetry]
name = "lucid-log"
version = "0.0.1"
description = "Render structured logs in your terminal."
authors = ["Hubert Bereś <h.beres@hotmail.com>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/Ddedalus/lucid-log"
homepage = "https://github.com/Ddedalus/lucid-log"
packages = [{include = "lucid_log"}]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^23.2.0"
typer = "^0.9.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=lcov" 


[tool.isort]
profile = "black"